Using latest change on common types
